--- a/hakunamatata/index.html
+++ b/hakunamatata/index.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-    <h1>Let's use Jenkins for CI/CD Pipeline using jenkins and IIS Expresss  </h1>
+    <h1>Let's use Jenkins for CI/CD Pipeline using jenkins and   </h1>
     <h1>This project helps to understand the working of CI/CD Pipeline for .NET sample application </h1>
 </body>
 </html>
